--- a/index.html
+++ b/index.html
@@ -10,6 +10,28 @@
   <body>
     <div>
       <!--The nav bar-->
+      <header>
+        <nav class="navbar">
+          <a href="#" class="nav-branding" id="logo">My Logo</a>
+          <ul class="nav-menu">
+            <li class="nav-item">
+              <a href="" class="lav-link text">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a href="" class="lav-link text">About</a>
+            </li>
+            <li class="nav-item">
+              <a href="" class="lav-link text">Contact</a>
+            </li>
+          </ul>
+          <div class="hamburger">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+          </div>
+        </nav>
+      </header>
+
 
       <!--The main section-->
       <main>
