modify class naming

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       </main>
       <!--work section-->
 
-      <div id="pop-up-win">
+      <div id="pop-up-win" class="hidden">
         <div>
           <div id="popup-head">
             <h2>Multi-Post Stories</h2>
@@ -96,7 +96,7 @@
             <div>
               <menu> </menu>
               <div id="popup-demo">
-                <a class="btn-action">
+                <a class="btn-act">
                   <span> See Live </span>
                   <svg
                     width="18"
@@ -113,7 +113,7 @@
                     />
                   </svg>
                 </a>
-                <a class="btn-action">
+                <a class="btn-act">
                   <span> See Source </span>
                   <svg
                     width="18"
