add js file extention and html element

--- a/index.html
+++ b/index.html
@@ -357,10 +357,12 @@
             maxlength="500"
             required
           ></textarea>
+          <small></small>
           <button type="submit">Get in touch</button>
         </form>
       </section>
     </div>
-    <script src="script.js"></script>
+    <script src="./js/script.js"></script>
+    <script src="./js/validation.js"></script>
   </body>
 </html>
