set an id for js function

--- a/index.html
+++ b/index.html
@@ -337,6 +337,7 @@
         </div>
         <form action="https://formspree.io/f/mbjwvgbk" method="post">
           <input
+            id="name"
             name="Name"
             type="text"
             placeholder="Input your name"
@@ -345,6 +346,7 @@
             required
           />
           <input
+            id="email"
             name="Email"
             type="email"
             placeholder="Input your email"
