Update My portfolio

--- a/index.html
+++ b/index.html
@@ -49,19 +49,29 @@
           <a class="indicator btn-act">LET'S CONNECT</a>
           <ul class="socials">
             <li class="indicator">
-              <img src="./images/twitter.svg" alt="Twitter" />
+              <a href="https://twitter.com/Getie_Haddis"
+                ><img src="./images/twitter.svg" alt="Twitter"
+              /></a>
             </li>
             <li class="indicator">
-              <img src="./images/linkedin.svg" alt="LinkedIn" />
+              <a href="https://www.linkedin.com/in/kumilachew-getie-0356bb157/"
+                ><img src="./images/linkedin.svg" alt="LinkedIn"
+              /></a>
             </li>
             <li class="indicator">
-              <img src="./images/medium.svg" alt="Medium" />
+              <a href="https://medium.com/@kumilachew1212"
+                ><img src="./images/medium.svg" alt="Medium"
+              /></a>
             </li>
             <li class="indicator">
-              <img src="./images/github.svg" alt="Github" />
+              <a href="https://github.com/Kumilachew-g"
+                ><img src="./images/github.svg" alt="Github"
+              /></a>
             </li>
             <li class="indicator">
-              <img src="./images/angellist.svg" alt="Angellist" />
+              <a href="https://angel.co/company/profile"
+                ><img src="./images/angellist.svg" alt="Angellist"
+              /></a>
             </li>
           </ul>
         </section>
@@ -137,18 +147,19 @@
       <section id="work-section">
         <div class="card">
           <div class="shot-img">
-            <img src="./images/Snapshoot-Portfolio-4.png" alt="Tonic" />
+            <img src="./images/popup/p1-min.png" alt="Tonic" />
           </div>
           <div class="details">
-            <h2>Multi-Post Stories</h2>
+            <h2>Haddis Technology PLC</h2>
             <ul>
-              <li>CANOPY</li>
-              <li>Back End Dev</li>
-              <li>2015</li>
+              <li>Microverse</li>
+              <li>Front End Dev</li>
+              <li>2022</li>
             </ul>
             <p>
-              A daily selection of privately personalized reads; no accounts or
-              sign-ups required.
+              This capstone project website is developed using HTML5, CSS3, and
+              vanilla JavaScript for technology campanies to present the service
+              provided by the campany and to share the latest work ifrormations.
             </p>
             <menu>
               <li>HTML</li>
@@ -160,24 +171,24 @@
         </div>
         <div class="card">
           <div class="shot-img">
-            <img src="./images/Snapshoot-Portfolio.png" alt="Tonic" />
+            <img src="./images/popup/p4-min.png" alt="Tonic" />
           </div>
           <div class="details">
-            <h2>Facebook 360</h2>
+            <h2>Movie Series</h2>
             <ul>
-              <li>FACEBOOK</li>
-              <li>FULL Stack Dev</li>
-              <li>2015</li>
+              <li>Microverse</li>
+              <li>Front End Dev</li>
+              <li>2022</li>
             </ul>
             <p>
-              Exploring the future of media in Facebook's first Virtual Reality
-              app; a place to discover and enjoy 360 photos and videos on Gear
-              VR.
+              This Movies Series project is about building my own web
+              application based on an external API. I was select an API that
+              provides data about a topic that you like and then build the
+              webapp around it. The webapp have 2 user interfaces.
             </p>
             <menu>
               <li>HTML</li>
               <li>CSS</li>
-              <li>Ruby on rails</li>
               <li>JavaScript</li>
             </menu>
             <a class="btn-act">See Project</a>
@@ -185,23 +196,49 @@
         </div>
         <div class="card">
           <div class="shot-img">
-            <img src="./images/Snapshoot-Portfolio-1.png" alt="Tonic" />
+            <img src="./images/popup/p5.png" alt="Tonic" />
           </div>
           <div class="details">
-            <h2>Uber Navigations</h2>
+            <h2>LeaderBoard</h2>
             <ul>
-              <li>UBER</li>
-              <li>Lead Developer</li>
-              <li>2018</li>
+              <li>Microverse</li>
+              <li>Kumilachew</li>
+              <li>2022</li>
             </ul>
             <p>
-              A smart assistant to make driving more safe, efficient, and fun by
-              unlocking your most expensive computer: your car.
+              The leaderboard website displays scores submitted by different
+              players. It also allows users to submit your score. Once scores
+              are submitted, users can refresh the current dashboard to get
+              updated scores.
             </p>
             <menu>
               <li>HTML</li>
               <li>CSS</li>
-              <li>Ruby on rails</li>
+              <li>JavaScript</li>
+              <li>Webpack</li>
+            </menu>
+            <a class="btn-act">See Project</a>
+          </div>
+        </div>
+        <div class="card">
+          <div class="shot-img">
+            <img src="./images/popup/p6.png" alt="Tonic" />
+          </div>
+          <div class="details">
+            <h2>Awesome Books</h2>
+            <ul>
+              <li>Microverse</li>
+              <li>Front End Dev</li>
+              <li>2022</li>
+            </ul>
+            <p>
+              This awesome book web application is developed using Vanilla
+              JavaScript. The app has adding books and storing them in local
+              storage and display books features to the pages.
+            </p>
+            <menu>
+              <li>HTML</li>
+              <li>CSS</li>
               <li>JavaScript</li>
             </menu>
             <a class="btn-act">See Project</a>
@@ -209,49 +246,26 @@
         </div>
         <div class="card">
           <div class="shot-img">
-            <img src="./images/Snapshoot-Portfolio-2.png" alt="Tonic" />
+            <img src="./images/popup/p7-min.png" alt="Tonic" />
           </div>
           <div class="details">
-            <h2>Multi-Post Stories</h2>
+            <h2>Book Store</h2>
             <ul>
-              <li>CANOPY</li>
-              <li>Back End Dev</li>
-              <li>2015</li>
+              <li>Microverse</li>
+              <li>Front End Dev</li>
+              <li>2022</li>
             </ul>
             <p>
-              A daily selection of privately personalized reads; no accounts or
-              sign-ups required.
-            </p>
-            <menu>
-              <li>HTML</li>
-              <li>CSS</li>
-              <li>Ruby on rails</li>
-              <li>JavaScript</li>
-            </menu>
-            <a class="btn-act">See Project</a>
-          </div>
-        </div>
-        <div class="card">
-          <div class="shot-img">
-            <img src="./images/Snapshoot-Portfolio-3.png" alt="Tonic" />
-          </div>
-          <div class="details">
-            <h2>Multi-Post Stroies</h2>
-            <ul>
-              <li>FACEBOOK</li>
-              <li>FULL Stack Dev</li>
-              <li>2015</li>
-            </ul>
-            <p>
-              Experimental content creation feature that allows users to add to
-              an existing story over the course of a day without spamming their
-              friends.
+              The bookstore is a website that allows you to display a list of
+              books, add a book, and remove a selected book. Built with React
+              and Redux.
             </p>
             <menu>
               <li>html</li>
               <li>css</li>
-              <li>Ruby on rails</li>
               <li>javaScript</li>
+              <li>React</li>
+              <li>redux</li>
             </menu>
             <a class="btn-act">See Project</a>
           </div>
@@ -270,19 +284,29 @@
           <a class="indicator btn-act">LET'S CONNECT</a>
           <ul class="socials">
             <li class="indicator">
-              <img src="./images/twitter.svg" alt="Twitter" />
+              <a href="https://twitter.com/Getie_Haddis"
+                ><img src="./images/twitter.svg" alt="Twitter"
+              /></a>
             </li>
             <li class="indicator">
-              <img src="./images/linkedin.svg" alt="LinkedIn" />
+              <a href="https://www.linkedin.com/in/kumilachew-getie-0356bb157/"
+                ><img src="./images/linkedin.svg" alt="LinkedIn"
+              /></a>
             </li>
             <li class="indicator">
-              <img src="./images/medium.svg" alt="Medium" />
+              <a href="https://medium.com/@kumilachew1212"
+                ><img src="./images/medium.svg" alt="Medium"
+              /></a>
             </li>
             <li class="indicator">
-              <img src="./images/github.svg" alt="Github" />
+              <a href="https://github.com/Kumilachew-g"
+                ><img src="./images/github.svg" alt="Github"
+              /></a>
             </li>
             <li class="indicator">
-              <img src="./images/angellist.svg" alt="Angellist" />
+              <a href="https://angel.co/company/profile"
+                ><img src="./images/angellist.svg" alt="Angellist"
+              /></a>
             </li>
           </ul>
           <a class="btn btn-act">Get my resume</a>
